# MiniWeatherKokkos

./: CMakeLists.txt  ChronoTimer.cc  ChronoTimer.h  MiniWeatherKokkos.cc  README.md
